// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker should render component with accessibility label 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "accessibilityLabel": "Label for this picker",
  },
  "type": [Function],
}
`;

exports[`Picker should render the Android native component 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {},
  "type": [Function],
}
`;

exports[`Picker should render the iOS native component 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {},
  "type": [Function],
}
`;
